@@ -1,3 +1,8 @@
+2008-03-05  Gary Benson  <gbenson@redhat.com>
+
+	* ports/hotspot/src/os_cpu/linux_zero/vm/globals_linux_zero.hpp
+	(ThreadStackSize): Increased by 512kb to cope with 64kb pages.
+
 2008-03-05  Lillian Angel  <langel@redhat.com>
 
 	* .hgignore: Updated.
